--- a/resources/styles.css
+++ b/resources/styles.css
@@ -6,7 +6,7 @@
   font-family: System-Bold;
   text-length: 32;
   text-anchor: middle;
-  fill: white;
+  fill: #ffffff;
 }
 #ampm {
   font-size: 40;
